--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,5 +1,8 @@
 [metadata.heroku]
   root-package = "github.com/annakertesz/cp-music-lib"
+  go-version = "go1.8.3"
+    install = [ "./cmd/..."]
+    ensure = "true"
 
 [[constraint]]
   name = "github.com/go-chi/chi"
